[package]
name = "invoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.12.1"
candid = "0.7.12"
garcon = "0.2.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.56"
futures = "0.3.21"
reqwest = "0.11.4"
serde = "1"
ic-utils = "0.11.0"
sha2 = "0.10.1"
rayon = "1.5.1"
ic-types = "0.3.0"
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4.3"
sha256 = "1.0.3"